--- a/css/main.css
+++ b/css/main.css
@@ -2960,9 +2960,7 @@ html.no-csstransitions .home-content__main {
 }
 
 .stats__col--highlight {
-    background: #111111 url("../images/count-bg.jpg");
-    background-size: 175px 175px;
-    position: relative;
+    background: #9d4e4e;
 }
 
 .stats__col--highlight::before {
@@ -2974,7 +2972,6 @@ html.no-csstransitions .home-content__main {
     width: 100%;
     height: 100%;
     opacity: .6;
-    background-image: linear-gradient(to bottom, rgba(13, 10, 11, 0) 0%, #0D0A0B 100%);
 }
 
 .stats__col--highlight .stats__count {
