--- a/css/main.css
+++ b/css/main.css
@@ -4167,3 +4167,116 @@ article.blog-single .blog-content {
         display: none;
     }
 }
+
+.txt-alegreyasans-bold {
+    font-family: "alegreyasans-bold", sans-serif;
+    font-size: 2rem;
+}
+.txt-alegreyasans-medium {
+    font-family: "alegreyasans-medium", sans-serif;
+    font-size: 2rem;
+}
+.txt-alegreyasans-thin {
+    font-family: "alegreyasans-thin", sans-serif;
+    font-size: 2rem;
+}
+.txt-alegreyasans-black {
+    font-family: "alegreyasans-black", sans-serif;
+    font-size: 2rem;
+}
+.txt-alegreyasanssc-italic {
+    font-family: "alegreyasanssc-italic", sans-serif;
+    font-size: 2rem;
+}
+.txt-alegreyasanssc-bolditalic {
+    font-family: "alegreyasanssc-bolditalic", sans-serif;
+    font-size: 2rem;
+}
+.txt-alegreyasanssc-extrabold {
+    font-family: "alegreyasanssc-extrabold", sans-serif;
+    font-size: 2rem;
+}
+.txt-alegreyasanssc-light {
+    font-family: "alegreyasanssc-light", sans-serif;
+    font-size: 2rem;
+}
+.txt-alegreyasans-extrabolditalic {
+    font-family: "alegreyasans-extrabolditalic", sans-serif;
+    font-size: 2rem;
+}
+.txt-alegreyasans-thinitalic {
+    font-family: "alegreyasans-thinitalic", sans-serif;
+    font-size: 2rem;
+}
+.txt-alegreyasans-mediumitalic {
+    font-family: "alegreyasans-mediumitalic", sans-serif;
+    font-size: 2rem;
+}
+.txt-alegreyasans-regular {
+    font-family: "alegreyasans-regular", sans-serif;
+    font-size: 2rem;
+}
+.txt-alegreyasans-light {
+    font-family: "alegreyasans-light", sans-serif;
+    font-size: 2rem;
+}
+.txt-alegreyasans-bolditalic {
+    font-family: "alegreyasans-bolditalic", sans-serif;
+    font-size: 2rem;
+}
+.txt-alegreyasanssc-extrabolditalic {
+    font-family: "alegreyasanssc-extrabolditalic", sans-serif;
+    font-size: 2rem;
+}
+.txt-alegreyasanssc-blackitalic {
+    font-family: "alegreyasanssc-blackitalic", sans-serif;
+    font-size: 2rem;
+}
+.txt-alegreyasanssc-black {
+    font-family: "alegreyasanssc-black", sans-serif;
+    font-size: 2rem;
+}
+.txt-alegreyasans-italic {
+    font-family: "alegreyasans-italic", sans-serif;
+    font-size: 2rem;
+}
+.txt-alegreyasans-lightitalic {
+    font-family: "alegreyasans-lightitalic", sans-serif;
+    font-size: 2rem;
+}
+.txt-alegreyasanssc-thinitalic {
+    font-family: "alegreyasanssc-thinitalic", sans-serif;
+    font-size: 2rem;
+}
+.txt-alegreyasanssc-mediumitalic {
+    font-family: "alegreyasanssc-mediumitalic", sans-serif;
+    font-size: 2rem;
+}
+.txt-alegreyasanssc-lightitalic {
+    font-family: "alegreyasanssc-lightitalic", sans-serif;
+    font-size: 2rem;
+}
+.txt-alegreyasanssc-bold {
+    font-family: "alegreyasanssc-bold", sans-serif;
+    font-size: 2rem;
+}
+.txt-alegreyasanssc-regular {
+    font-family: "alegreyasanssc-regular", sans-serif;
+    font-size: 2rem;
+}
+.txt-alegreyasans-extrabold {
+    font-family: "alegreyasans-extrabold", sans-serif;
+    font-size: 2rem;
+}
+.txt-alegreyasanssc-thin {
+    font-family: "alegreyasanssc-thin", sans-serif;
+    font-size: 2rem;
+}
+.txt-alegreyasans-blackitalic {
+    font-family: "alegreyasans-blackitalic", sans-serif;
+    font-size: 2rem;
+}
+.txt-alegreyasanssc-medium {
+    font-family: "alegreyasanssc-medium", sans-serif;
+    font-size: 2rem;
+}
